--- a/solo_project_app/static/solo_project_app/dashboard.css
+++ b/solo_project_app/static/solo_project_app/dashboard.css
@@ -85,12 +85,14 @@ nav{
     font-size: 30px;
     border: 3px solid black;
     border-radius: 15px;
+  
 }
 .left{
-    width: 50%;
     margin: 30px;
     padding: 20px;
-
+    display: grid;
+    width: 80%;
+    margin: auto;
 }
 button{
     width: 220px;
@@ -108,12 +110,12 @@ button:hover{
     border: 1px solid black;
     font-size: 50px;
 }
-.middle{
-    display: flex;
-    justify-content: space-between;
-}
+
 .feed{
     border: 1px solid black;
+    padding: 12px;
+    width: 80%;
+    margin: auto;
 }
 button{
     background-color: #0f828c;
@@ -126,3 +128,15 @@ button{
 button:hover{
     background-color: rgb(90, 90, 165);
 }
+.middle{
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+    margin:40px auto;
+    border-bottom: 3px solid black;
+    padding: 20px;
+}
+#c-name{
+    text-align: center;
+}
+
