--- a/solo_project_app/templates/home.html
+++ b/solo_project_app/templates/home.html
@@ -16,7 +16,7 @@
         <div class="container-fluid ">
             <img id="logo" src="{% static 'images/channels4_profile.jpg' %}" alt="">
             <div>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div  id="navbarSupportedContent">
                     <a class="login-link" href="{% url 'login_page' %}"><button  id="login-btn" >Log In</button></a>
                 </div>
             </div>
@@ -25,7 +25,7 @@
     <div class="content ">
         <div class="left ">
             <div class="parent">
-                <h1>Who Wr Are</h1>
+                <h1>Who We Are</h1>
                 <div class="par">
                     <p>ABU ALIA ICT is a modern trading academy dedicated to helping individuals master Forex trading
                         and financial markets. We believe trading is not just about numbers, but about discipline,
