--- a/solo_project_app/static/solo_project_app/dashboard.css
+++ b/solo_project_app/static/solo_project_app/dashboard.css
@@ -1,45 +1,52 @@
-
-nav{
+nav {
     background-color: #0f828c;
     padding: 0 50px 0 50px;
 }
-.login-link{
+
+.login-link {
     text-decoration: none;
     color: white;
     font-size: 30px;
 }
-#login-btn{
+
+#login-btn {
     background-color: #0f828c;
     box-shadow: 6px 6px 10px black;
     width: 130px;
     height: 40px;
-  
+
     color: white;
     font-size: 20px;
 }
-#login-btn:hover{
+
+#login-btn:hover {
     background-color: white;
     color: black;
 }
-#welcome{
+
+#welcome {
     color: white;
 }
-.par{
+
+.par {
     background-color: #0f828c;
     color: white;
     padding: 20px;
 
 
 }
-.parent{
+
+.parent {
     margin-top: 30px;
     width: 70%;
 }
-.telegram{
+
+.telegram {
     color: white;
 }
+
 .bottom {
-    background-color: #0f828c;   
+    background-color: #0f828c;
     display: flex;
     justify-content: space-between;
     height: 100px;
@@ -47,36 +54,41 @@ nav{
     position: sticky;
     width: 100%;
     bottom: 0%;
-                            
+
 }
 
 .bottom ol {
-    list-style: none;           
+    list-style: none;
     display: flex;
     justify-content: space-between;
-    gap: 20px;                   
+    gap: 20px;
     margin: 0;
     padding: 0;
 }
 
 .bottom img {
-    width: 30px;                 
+    width: 30px;
     height: auto;
-}#copyright{
+}
+
+#copyright {
     font-family: 'Times New Roman', Times, serif;
 }
-.icons{
+
+.icons {
     display: flex;
     justify-content: space-between;
 }
-#logo{
+
+#logo {
     height: 50px;
 }
 
-.log{
+.log {
     background-color: red;
 }
-.courses{
+
+.courses {
     margin: 20px;
     padding: 30px;
     text-align: center;
@@ -85,58 +97,196 @@ nav{
     font-size: 30px;
     border: 3px solid black;
     border-radius: 15px;
-  
+
 }
-.left{
+
+.left {
     margin: 30px;
     padding: 20px;
     display: grid;
     width: 80%;
     margin: auto;
 }
-button{
+
+button {
     width: 220px;
     height: 80px;
     background-color: white;
     box-shadow: 6px 6px 6px black;
 }
-button:hover{
+
+button:hover {
     background-color: orange;
     color: white;
 }
-.table{
+
+.table {
     width: 80%;
     margin: 60px;
     border: 1px solid black;
     font-size: 50px;
 }
 
-.feed{
+.feed {
     border: 1px solid black;
     padding: 12px;
     width: 80%;
     margin: auto;
 }
-button{
+
+button {
     background-color: #0f828c;
     width: 250px;
-    margin:15px auto; 
-    color: white; 
+    margin: 15px auto;
+    color: white;
     border-radius: 10px;
     font-family: 'Times New Roman', Times, serif
 }
-button:hover{
+
+button:hover {
     background-color: rgb(90, 90, 165);
 }
-.middle{
+
+.middle {
     display: flex;
     justify-content: space-around;
     width: 80%;
-    margin:40px auto;
+    margin: 40px auto;
     border-bottom: 3px solid black;
     padding: 20px;
+    height: 820px;
 }
-#c-name{
+
+#c-name {
     text-align: center;
 }
 
+#a-course {
+    text-align: center;
+}
+
+#comment {
+    width: 400px;
+    margin: auto;
+}
+
+.back {
+    text-align: center;
+}
+
+.back a {
+    text-decoration: none;
+    color: #0f828c;
+}
+.tradingview-widget-container{
+   height: 520px;
+   margin: auto;
+}
+.api{
+    border: 3px solid #0f828c;
+    padding: 20px;
+}
+
+
+@media only screen and (max-width: 480px) {
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .tradingview-widget-container {
+        display: none;
+    }
+
+    #acd-img {
+        display: none;
+    }
+
+    .bottom {
+        display: none;
+    }
+
+    .courses {
+        width: 250px;
+
+    }
+
+    button {
+        width: 120px;
+        font-size: 15px;
+        height: 40px;
+    }
+
+    #comment {
+        width: 80px;
+    }
+
+    p {
+        font-size: 15px;
+    }
+
+    .navbar h1 {
+        display: none;
+    }
+
+    .feed {
+        width: 180px;
+    }
+
+}
+
+@media only screen and (min-width: 481px) and (max-width:1024px) {
+
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .tradingview-widget-container {
+        display: block;
+    }
+
+    #acd-img {
+        display: none;
+    }
+
+    .bottom {
+        display: none;
+    }
+
+    .courses {
+        width: 650px;
+        margin: 12px auto;
+
+    }
+
+    button {
+        width: 120px;
+        font-size: 15px;
+        height: 40px;
+    }
+
+    #comment {
+        width: 180px;
+    }
+
+    p {
+        font-size: 15px;
+    }
+
+    .navbar h1 {
+        display: none;
+    }
+
+    .feed {
+        width: 300PX;
+    }
+
+    .tradingview-widget-container {
+        display: none;
+    }
+
+}
