--- a/solo_project_app/static/solo_project_app/style.css
+++ b/solo_project_app/static/solo_project_app/style.css
@@ -1,14 +1,15 @@
-
-nav{
+nav {
     background-color: #0f828c;
     padding: 0 50px 0 50px;
 }
-.login-link{
+
+.login-link {
     text-decoration: none;
     color: white;
     font-size: 30px;
 }
-#login-btn{
+
+#login-btn {
     background-color: #0f828c;
     box-shadow: 6px 6px 10px black;
     width: 130px;
@@ -17,37 +18,44 @@ nav{
     color: white;
     font-size: 20px;
 }
-#login-btn:hover{
+
+#login-btn:hover {
     background-color: white;
     color: black;
 }
-#welcome{
+
+#welcome {
     color: white;
 }
-.content{
+
+.content {
     width: 30%;
     margin: 50px;
     display: flex;
     flex-direction: row;
     width: 1500px;
-    margin:20px auto;
+    margin: 20px auto;
 }
-.par{
+
+.par {
     background-color: #0f828c;
     color: white;
     padding: 20px;
 
 
 }
-.parent{
+
+.parent {
     margin-top: 30px;
     width: 70%;
 }
-.telegram{
+
+.telegram {
     color: white;
 }
+
 .bottom {
-    background-color: #0f828c;   
+    background-color: #0f828c;
     display: flex;
     justify-content: space-between;
     height: 100px;
@@ -55,32 +63,105 @@ nav{
     position: absolute;
     width: 100%;
     bottom: 0%;
-                            
+
 }
 
 .bottom ol {
-    list-style: none;           
+    list-style: none;
     display: flex;
     justify-content: space-between;
-    gap: 20px;                   
+    gap: 20px;
     margin: 0;
     padding: 0;
 }
 
 .bottom img {
-    width: 30px;                 
+    width: 30px;
     height: auto;
-}#copyright{
+}
+
+#copyright {
     font-family: 'Times New Roman', Times, serif;
 }
-.icons{
+
+.icons {
     display: flex;
     justify-content: space-between;
 }
-#logo{
+
+#logo {
     height: 50px;
 }
 
-.log{
+.log {
     background-color: red;
 }
+
+@media only screen and (max-width: 480px) {
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .content {
+        width: 100%;
+        display: grid;
+        align-items: center;
+    }
+
+    .bottom {
+        position: relative;
+        display: block
+    }
+
+    ;
+
+    .login-link {
+        display: block;
+    }
+
+    #logo {
+        margin-right: 60px;
+    }
+
+    #login-btn {
+        width: 100%;
+        max-width: 300px;
+        margin: 20px auto;
+        display: block;
+    }
+
+    .parent {
+
+        margin: auto;
+    }
+    #copyright{
+        display: none;
+    }
+}
+@media only screen and (min-width: 481px) and  (max-width:1023px){
+
+     .navbar {
+        display: flex;
+        justify-content: space-between;
+    } 
+
+    .content {
+        width: 100%;
+        display: grid;
+        align-items: center;
+    }
+
+    .bottom {
+        position: relative;
+    }
+
+
+    #logo {
+        margin-right: 60px;
+    }
+
+    .parent {
+        margin: auto;
+    }
+} 
