--- a/solo_project_app/templates/register.html
+++ b/solo_project_app/templates/register.html
@@ -8,8 +8,8 @@
     <title>Login & Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'solo_project_app/register.css' %}">
     </head>
-    <link rel="stylesheet" href="{% static 'solo_project_app/register.css' %}">
 
 <body>
 
@@ -18,7 +18,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card shadow-lg rounded-3" style="border: 1px solid black; width: 1000px;">
+            <div class="card shadow-lg rounded-3" style="border: 1px solid black; ;">
                 <div class="card-header text-center  text-white">
                     <h4>Register</h4>
                 </div>
